--- a/config.yml
+++ b/config.yml
@@ -3,3 +3,6 @@ twitter:
   consumer_secret: YOUR_CONSUMER_SECRET
   token: YOUR_OAUTH_TOKEN
   token_secret: YOUR_OAUTH_TOKEN_SECRET
+match_introductions:
+- "%{calixto} You should ask %{melibea} out"
+- "I think %{calixto} and %{melibea} are a really good match"
